<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".LoginActivity">


    <!--
      Contenedor para mostrar el fragment de Register “encima” del login.
    -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:visibility="gone"
        tools:layout="@layout/fragment_register" />

    <!--
      Layout principal del login.
    -->
    <LinearLayout
        android:id="@+id/main_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/ic_logo_splash"
            android:layout_width="wrap_content"
            android:layout_height="266dp"
            android:contentDescription="@string/App_name"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_logo" />

        <!-- Input Email -->
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorOutline"
            android:hint="@string/MailDefaultText"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOnSurface" />

        <!-- Input Password -->
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="?attr/colorOutline"
            android:hint="@string/passwordDefaultText"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOnSurface" />

        <!-- Boton Login -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/loginTextButton" />

        <!-- Boton Register -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/createAccountText" />

        <!-- Boton Login Google SignIn estandar -->
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

</RelativeLayout>